--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -50,6 +50,9 @@ a.btn {
   -webkit-transition: visibility 0.5s ease-in;
   transition: visibility 0.5s ease-in;
 }
+#adminTable {
+  transition: all 0.5s ease-in;
+}
 #loginEmailReminderText {
   margin-left: 8px;
   font-size: 0.87em;
@@ -1292,10 +1295,16 @@ div.input-group.date {
   button.btn-delete-consent {
     padding: 2px;
   }
+  #adminTable .email-field {
+    display: none;
+  }
 }
 @media (max-width: 730) {
   #userSessionsList {
     font-size: 0.9em;
+  }
+  #adminTable .status-field, #adminTable .reports-field {
+    display: none;
   }
 }
 @media (min-width: 768px) {
@@ -1352,6 +1361,9 @@ div.input-group.date {
   }
   .load-container {
     min-height: 1.5em;
+  }
+  #adminTable .consentdate-field {
+    display: none;
   }
 }
 @media (min-width: 992px) {
@@ -1415,6 +1427,9 @@ div.input-group.date {
 }
 @media (max-width: 1199px) {
   .profile-img {
+    display: none;
+  }
+  #adminTable .organization-field {
     display: none;
   }
 }
