frontend performance tweaks on patients_by_orgs.html and css fixes

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -841,8 +841,6 @@ table.profile-audit-log TH,
 #loadingIndicator {
   /*display: none;*/
   position: fixed;
-  /*top: 200px;
-  left: 48%;*/
   top: 0;
   left: 0;
   right: 0;
@@ -850,19 +848,11 @@ table.profile-audit-log TH,
   height: 2em;
   width: 2em;
   overflow: show;
-  /*margin-left: -50px;*/
-  /*width: 100px;
-  height: 100px;*/
   font-size: 1em;
   text-align: center;
   z-index: 99999;
   color: #444;
   margin: auto;
-  /*-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-  filter: alpha(opacity=80);
-  -moz-opacity: 0.8;
-  -khtml-opacity: 0.8;
-  opacity: 0.8;*/
 }
 #loadingIndicator:before {
   content: ' ';
@@ -974,14 +964,6 @@ table.profile-audit-log TH,
     transform: rotate(360deg);
   }
 }
-/*********
-.loading {
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
-  filter: alpha(opacity=40);
-  -moz-opacity: 0.4;
-  -khtml-opacity: 0.4;
-  opacity: 0.4;
-}*********/
 .side {
   height: 26em;
 }
@@ -1176,13 +1158,32 @@ a.btn-delete {
 div.input-group.date {
   margin-top: -2px;
 }
+div.org-container legend {
+  color: #474848;
+}
+div.org-container label.org-label{
+  margin: 0;
+}
 
+div.org-container .text-muter {
+  margin-bottom: 4px;
+  margin-top:4px;
+  font-size: 0.97em;
+  color: #989696;
+}
+div.org-container input[type="checkbox"] {
+  position:relative;
+  top:-1px;
+  right:4px;
+}
+#fillOrgs .divider {
+  display:block;
+  height:0.25em;
+}
 .indent {
   padding: 0 1.4em;
 }
-.text-muter {
-  color: #8e8d8d;
-}
+
 /** Responsive sizes **/
 @media (max-width: 480px) {
   #footerLockup {
